--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       downloadEl.innerHTML = "";
 
       try {
-        // Replace this URL with your Render backend URL
-        const res = await fetch("https://ytmp3-online.onrender.com/download", {
+        // ✅ Your Render backend URL
+        const res = await fetch("https://ytmp3-online-1.onrender.com/download", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ url })
@@ -46,7 +46,7 @@
         const data = await res.json();
         statusEl.textContent = "✅ Conversion complete!";
         // Full download link
-        downloadEl.innerHTML = `<a href= "https://ytmp3-online-1.onrender.com${data.file}" class="text-cyan-400 underline" target="_blank">Download MP3</a>`;
+        downloadEl.innerHTML = `<a href="https://ytmp3-online-1.onrender.com${data.file}" class="text-cyan-400 underline" target="_blank">Download MP3</a>`;
       } catch (err) {
         statusEl.textContent = "❌ Error: " + err.message;
       }
