--- a/index.html
+++ b/index.html
@@ -35,26 +35,25 @@
       downloadEl.innerHTML = "";
       convertBtn.disabled = true;
 
-      // Start listening to backend SSE for progress
-      const evtSource = new EventSource("https://ytmp3-online-1.onrender.com/progress");
+      const evtSource = new EventSource("http://localhost:10000/progress");
       evtSource.onmessage = (event) => {
         statusEl.textContent = "⏳ Converting... " + event.data;
       };
 
       try {
-        const res = await fetch("https://ytmp3-online-1.onrender.com/download", {
+        const res = await fetch("http://localhost:10000/download", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ url })
         });
 
-        evtSource.close(); // stop SSE after conversion finishes
+        evtSource.close();
 
         if (!res.ok) throw new Error("Server error");
 
         const data = await res.json();
         statusEl.textContent = "✅ Conversion complete!";
-        downloadEl.innerHTML = `<a href="https://ytmp3-online-1.onrender.com${data.file}" class="text-cyan-400 underline" target="_blank">Download MP3</a>`;
+        downloadEl.innerHTML = `<a href="http://localhost:10000${data.file}" class="text-cyan-400 underline" target="_blank">Download MP3</a>`;
       } catch (err) {
         evtSource.close();
         statusEl.textContent = "❌ Error: " + err.message;
@@ -67,3 +66,4 @@
   </script>
 </body>
 </html>
+
