--- a/index.html
+++ b/index.html
@@ -4,66 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube to MP3</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex items-center justify-center">
-  <div class="bg-gray-800 p-8 rounded-2xl shadow-lg w-full max-w-lg space-y-6">
-    <h1 class="text-2xl font-bold text-center">YouTube to MP3 Online</h1>
-    <input id="ytUrl" type="text" placeholder="Enter YouTube link"
-      class="w-full p-3 rounded-xl bg-gray-700 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-cyan-400" />
-    <button id="convertBtn"
-      class="w-full bg-cyan-500 hover:bg-cyan-600 text-white font-semibold py-3 rounded-xl transition">
-      Convert to MP3
-    </button>
-    <div id="status" class="text-center text-sm text-gray-400"></div>
-    <div id="download" class="text-center mt-4"></div>
-  </div>
-
-  <script>
-    const statusEl = document.getElementById("status");
-    const downloadEl = document.getElementById("download");
-    const convertBtn = document.getElementById("convertBtn");
-
-    async function convertVideo() {
-      const url = document.getElementById("ytUrl").value.trim();
-      if (!url) {
-        statusEl.textContent = "⚠️ Please enter a YouTube link.";
-        return;
-      }
-
-      statusEl.textContent = "⏳ Starting conversion...";
-      downloadEl.innerHTML = "";
-      convertBtn.disabled = true;
-
-      const evtSource = new EventSource("http://localhost:10000/progress");
-      evtSource.onmessage = (event) => {
-        statusEl.textContent = "⏳ Converting... " + event.data;
-      };
-
-      try {
-        const res = await fetch("http://localhost:10000/download", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ url })
-        });
-
-        evtSource.close();
-
-        if (!res.ok) throw new Error("Server error");
-
-        const data = await res.json();
-        statusEl.textContent = "✅ Conversion complete!";
-        downloadEl.innerHTML = `<a href="http://localhost:10000${data.file}" class="text-cyan-400 underline" target="_blank">Download MP3</a>`;
-      } catch (err) {
-        evtSource.close();
-        statusEl.textContent = "❌ Error: " + err.message;
-      } finally {
-        convertBtn.disabled = false;
-      }
-    }
-
-    convertBtn.addEventListener("click", convertVideo);
-  </script>
+<body>
+  <h1>YouTube to MP3 Downloader</h1>
+  <input type="text" id="url" placeholder="Paste YouTube URL">
+  <button onclick="downloadMP3()">Download</button>
+  <p id="status"></p>
+  <script src="script.js"></script>
 </body>
 </html>
-
